@startuml classes

class Article {
    - name: str
    - description: str
    - category: Category
    - brand: Brand
    - stock_min: float
    - code_ean13: str
}

class ReceiptType {
    - name: str
    - description: str
    - type: int // 1: in, 0: transfer, -1: out
}

class Receipt {
    - header: ReceiptHeader
    - items: ReceiptItem
    - footer: ReceiptFooter
}

class ReceiptHeader {
    - submission_date: datetime
    - type: ReceiptType

}

class ReceiptItem {
    - articles: Article
    - quantity: float
    - batch: Batch

}

class ReceiptFooter {
    - total: float

}

class Category {
    - name: str
    - description: str
}

class Brand {
    - name: str
    - description: str
}

class Stock {
    - article: Article
    - quantity: float
    - batch: Batch
    - entrytype: int // 1: in, 0: transfer, -1: out
    - receiptnumber: int


}

class Notification {
    //INFO,WARNING,ERROR
    - type: str 
    - message: str
    - date: datetime
}

class Batch {
    - code: 
    - expiration_date:
}
Stock --> Article
Category --> Article
Brand --> Article
ReceiptType --> Receipt
ReceiptHeader  ---Receipt
ReceiptItem  --- Receipt
ReceiptFooter  --- Receipt
